# AlgoBench

./: .gitignore  CMakeLists.txt  README.md
Backend/: AlgoTimer.h  Algorithm.cpp  Algorithm.h  BinarySearch.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  Client.cpp  Client.h  ClientPipe.cpp  ClientPipe.h  ExternalMergeSort.cpp  ExternalMergeSort.h  Generator.cpp  Generator.h  GraphAlgo.cpp  GraphAlgo.h  GraphStructure.cpp  GraphStructure.h  HashBucketStructure.cpp  HashBucketStructure.h  Hashing.cpp  Hashing.h  Heapsort.cpp  Heapsort.h  InsertionSort.cpp  InsertionSort.h  InternalMergeSort.cpp  InternalMergeSort.h  LinearSearch.cpp  LinearSearch.h  Quicksort.cpp  Quicksort.h  Semaphore.h  Server.cpp  Server.h  ServerPipe.cpp  ServerPipe.h  global.cpp  global.h  (+5 more)
Frontend/: AlgoBench.command  AlgoBench.desktop  CMakeLists.txt
Frontend/src/: CMakeLists.txt  MANIFEST.MF
Frontend/src/inf2b/algobench/config/: config.properties  default.properties  settings.xml
Frontend/src/inf2b/algobench/html/: css.css  main_help.html  newtask_help.html  style.css
Frontend/src/inf2b/algobench/main/: AlgoBench.java
Frontend/src/inf2b/algobench/model/: ClientPipe.java  MyChart.java  MyChartBuilder.java  PDFGeneration.java  Plotter.java  Task.java  TaskMaster.java
Frontend/src/inf2b/algobench/ui/: CompareChartPanel.form  CompareChartPanel.java  CompareDialog.form  CompareDialog.java  EditTaskDialog.form  EditTaskDialog.java  Help.form  Help.java  MainWindow.form  MainWindow.java  NewTaskDialog.form  NewTaskDialog.java  ResultsChartPanel.form  ResultsChartPanel.java  ResultsTablePanel.form  ResultsTablePanel.java  SimpleSwingBrowser.java  TaskOverviewPanel.form  TaskOverviewPanel.java
Frontend/src/inf2b/algobench/ui/components/: GraphTaskSubPanel.form  GraphTaskSubPanel.java  HashTaskSubPanel.form  HashTaskSubPanel.java  SearchTaskSubPanel.form  SearchTaskSubPanel.java  SortTaskSubPanel.form  SortTaskSubPanel.java  TreeTaskSubPanel.form  TreeTaskSubPanel.java
Frontend/src/inf2b/algobench/util/: CheckBoxListRenderer.java  CheckboxTableRenderer.java  CompareDetailTableRenderer.java  ITaskCompleteListener.java  ITaskCompleteNotifier.java  ITaskSubPanel.java  ITreeSubPanel.java  InputGenerator.java  ListRenderer.java  SmartScroller.java  Util.java
Frontend/src/xml/xslt/: task.xsl
